Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/InterfaceOverrideFinal.out
InterfaceOverrideFinal.java:8:10: compiler.err.override.meth: (compiler.misc.cant.override: notify(), InterfaceOverrideFinal, notify(), java.lang.Object), final
1 error
