Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/InterfaceOverrideFinal.java
/*
 * @test /nodynamiccopyright/
 * @bug 4668238 4721069
 * @summary compiler must reject interface "overriding" final Object meth.
 * @compile/fail/ref=InterfaceOverrideFinal.out -XDrawDiagnostics  InterfaceOverrideFinal.java
 */
public interface InterfaceOverrideFinal {
    void notify();
}
